--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -1,5 +1,5 @@
-aiogram>=3.14,<4.0
-aiohttp>=3.10,<4.0
-redis>=5.0,<6.0
-pydantic-settings>=2.0,<3.0
-python-dotenv>=1.0,<2.0
+aiogram==3.25.0
+aiohttp==3.13.3
+redis==7.1.1
+pydantic-settings==2.12.0
+python-dotenv==1.2.1
